# robotframework-facelibrary

./: pyproject.toml
.github/workflows/: test.yml
FaceLibrary/: __init__.py  facelibrary.py  tasks.py
atest/: atest.robot
docs/: README.md  facelibrary.html
utest/: test_facelibrary.py
